--- a/source/index.html
+++ b/source/index.html
@@ -15,12 +15,176 @@
 <body>
 
   <header class="page-header">
+    <nav class="header-nav">
+      <a class="header-nav__logo">
+        <img src="img/logo-site-full.svg" alt="Smart Device: умные технологии" width="202" height="52">
+      </a>
+      <div class="header-nav__contacts">
+        <ul class="header-nav__list">
+          <li class="header-nav__item">
+            <a class="header-nav__link header-nav__link--mail" href="mailto:info@sd.ru">info@sd.ru</a>
+          </li>
+          <li class="header-nav__item">
+            <a class="header-nav__link header-nav__link--phone" href="tel:+74950005252">+7 (495) 000 52 52</a>
+          </li>
+        </ul>
+        <a class="button header-nav__button" href="#">Заказать звонок</a>
+      </div>
+    </nav>
+    <h1 class="page-header__title">Печатные платы</h1>
+    <p class="page-header__description">производство и монтаж, поставка комплектующих, блоков и модулей</p>
+    <a class="button page-header__button" href="#">Получить бесплатную консультацию</a>
+    <a class="page-header__link" href="#">Скролл вниз</a>
   </header>
 
   <main class="page-main">
+    <section class="features">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <ul class="features__list">
+        <li class="features__item features__item--fast">
+          <h3>Оперативные сроки </h3>
+          <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять
+            заказы плат и комплектующих в самые короткие сроки</p>
+        </li>
+        <li class="features__item features__item--vendors">
+          <h3>Крупные поставщики</h3>
+          <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
+            Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
+          </p>
+        </li>
+        <li class="features__item features__item--confeducality">
+          <h3>Полная конфиденциальность</h3>
+          <p>По желанию клиента мы обеспечиваем полную конфеденциальность.
+          </p>
+        </li>
+        <li class="features__item features__item--personal">
+          <h3>Персонализация стоимости</h3>
+          <p>Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
+            устраивает. </p>
+        </li>
+      </ul>
+    </section>
+    <section class="review">
+      <h2 class="review__title">О компании</h2>
+      <div class="review__description">
+        <p>Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997
+          года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
+        <p>Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные
+          платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД),
+          РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители
+          светотехники России.</p>
+      </div>
+      <a class="button review__button" href="#">Подробнее</a>
+    </section>
+    <section class="services">
+      <h2 class="services__title">Service Device предлагает следующие товары и услуги</h2>
+      <ul class="services__list">
+        <li class="services__item">
+          <a href="#">Производство <br> печатных плат</a>
+        </li>
+        <li class="services__item">
+          <a href="#">Монтаж печатных <br> плат</a>
+        </li>
+        <li class="services__item">
+          <a href="#">Комплектующие <br> для светотехники</a>
+        </li>
+      </ul>
+    </section>
+    <section class="feedback">
+      <h2 class="feedback__title">Остались вопросы? Задайте их нам!</h2>
+      <p class="feedback__description">Мы проконсультируем Вас бесплатно</p>
+      <form class="fedback__form form" action="https://echo.htmlacademy.ru" method="POST">
+        <div class="form__field">
+          <label class="visually-hidden" for="user-name">Имя</label>
+          <input id="user-name" type="text" placeholder="Имя" inputmode="text" required>
+        </div>
+        <div class="form__field">
+          <label class="visually-hidden" for="user-phone">Номер телефона</label>
+          <input id="user-phone" type="tel" placeholder="Телефон" inputmode="tel" minlength="16" required>
+        </div>
+        <textarea name="message" id="message" placeholder="Ваш вопрос" inputmode="text" required></textarea>
+        <button class="form__button" type="submit">Задать вопрос</button>
+        <div class="form__checkbox">
+          <input class="visually-hidden" type="checkbox" name="assent" id="assent" checked>
+          <label for="assent">Я согласен на обработку персональных данных</label>
+        </div>
+      </form>
+    </section>
   </main>
 
-  <footer class="contacts" id="contacts">
+  <footer class="page-footer">
+    <div class="page-footer__top">
+      <div class="page-footer__links">
+        <a class="page-footer__logo">
+          <img src="img/logo-site-full.svg" alt="Smart Device: умные технологии" width="198" height="51">
+        </a>
+        <ul class="page-footer__links-list">
+          <li class="page-footer__links-item page-footer__links-item--fb">
+            <a class="page-footer__link page-footer__link--fb" href="https://www.facebook.com/htmlacademy"
+              target="_blank" aria-label="Facebook">
+              <svg width="27" height="27" aria-label="Мы на Facebook">
+                <use xlink:href="img/sprite.svg#icon-fb"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="page-footer__links-item page-footer__links-item--class">
+            <a class="page-footer__link page-footer__link--class" href="https://ok.ru/" target="_blank"
+              aria-label="Одноклассники">
+              <svg width="27" height="27" aria-label="Мы в Одноклассниках">
+                <use xlink:href="img/sprite.svg#icon-classmate"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="page-footer__links-item page-footer__links-item--vk">
+            <a class="page-footer__link page-footer__link--vk" href="https://vk.com/htmlacademy" target="_blank"
+              aria-label="ВКонтакте">
+              <svg width="27" height="27" aria-label="Мы ВКонтакте">
+                <use xlink:href="img/sprite.svg#icon-vk"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <section class="page-footer__menu">
+        <h2 class="page-footer__menu-title">Разделы сайта</h2>
+        <ul class="page-footer__menu-list">
+          <li class="page-footer__menu-item">
+            <a href="#">О компании</a>
+          </li>
+          <li class="page-footer__menu-item">
+            <a href="#">Комплектующие</a>
+          </li>
+          <li class="page-footer__menu-item">
+            <a href="#">Продукты</a>
+          </li>
+          <li class="page-footer__menu-item">
+            <a href="#">Доставка</a>
+          </li>
+          <li class="page-footer__menu-item">
+            <a href="#">Производство печатных плат</a>
+          </li>
+          <li class="page-footer__menu-item">
+            <a href="#">Контакты</a>
+          </li>
+          <li class="page-footer__menu-item">
+            <a href="#">Монтаж печатных плат</a>
+          </li>
+        </ul>
+      </section>
+      <section class="page-footer__contacts">
+        <h2 class="page-footer__contacts-title">Наш офис</h2>
+        <p class="page-footer__contacts-address">г. Мытищи, Олимпийский проспект, д.10</p>
+        <a class="page-footer__contacts-phone" href="tel:+74955894050">+7 (495) 589-40-50</a>
+        <a class="page-footer__contacts-phone" href="tel:+79250038767">+7 (925) 003-87-67</a>
+        <a class="page-footer__contacts-phone" href="tel:+792692608079">+7 (926) 926-080-79</a>
+      </section>
+    </div>
+    <div class="page-footer__down">
+      <p class="page-footer__law">Все права защищены</p>
+      <p class="page-footer__copyright">1999-2018 SD Service Devices</p>
+      <a class="page-footer__privacy" href="#">Условия конфиденциальности</a>
+      <p class="page-footer__tag">Developed by wow studio</p>
+    </div>
   </footer>
 
   <script src="https://unpkg.com/imask"></script>
